--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -95,35 +95,35 @@ services:
         - "traefik.http.services.hive-frontend.loadbalancer.passhostheader=true"
 
   # N8N Workflow Automation
-  n8n:
-    image: n8nio/n8n
-    volumes:
-      - /rust/containers/n8n/data:/home/node/.n8n
-      - /rust/containers/n8n/import:/home/node/import
-    environment:
-      - N8N_REDIS_HOST=redis
-      - N8N_REDIS_PORT=6379
-      - N8N_REDIS_PASSWORD=hivepass
-      - N8N_QUEUE_BULL_REDIS_HOST=redis
-      - N8N_QUEUE_BULL_REDIS_PORT=6379
-      - N8N_QUEUE_BULL_REDIS_PASSWORD=hivepass
-    networks:
-      - hive-network
-      - tengig
-    ports:
-      - 5678:5678
-    deploy:
-      placement:
-        constraints: []
+#  n8n:
+#    image: n8nio/n8n
+#    volumes:
+#      - /rust/containers/n8n/data:/home/node/.n8n
+#      - /rust/containers/n8n/import:/home/node/import
+#    environment:
+#      - N8N_REDIS_HOST=redis
+#      - N8N_REDIS_PORT=6379
+#      - N8N_REDIS_PASSWORD=hivepass
+#      - N8N_QUEUE_BULL_REDIS_HOST=redis
+#      - N8N_QUEUE_BULL_REDIS_PORT=6379
+#      - N8N_QUEUE_BULL_REDIS_PASSWORD=hivepass
+#    networks:
+#      - hive-network
+#      - tengig
+#    ports:
+#      - 5678:5678
+#    deploy:
+#      placement:
+#        constraints: []
 #          - node.hostname == walnut
-      labels:
-          - "traefik.enable=true"
-          - "traefik.http.routers.n8n.rule=Host(`n8n.home.deepblack.cloud`)"
-          - "traefik.http.routers.n8n.entrypoints=web-secured"
-          - "traefik.http.routers.n8n.tls.certresolver=letsencryptresolver"
-          - "traefik.http.services.n8n.loadbalancer.server.port=5678"
-          - "traefik.http.services.n8n.loadbalancer.passhostheader=true"
-          - "traefik.docker.network=tengig"
+#      labels:
+#          - "traefik.enable=true"
+#          - "traefik.http.routers.n8n.rule=Host(`n8n.home.deepblack.cloud`)"
+#          - "traefik.http.routers.n8n.entrypoints=web-secured"
+#          - "traefik.http.routers.n8n.tls.certresolver=letsencryptresolver"
+#          - "traefik.http.services.n8n.loadbalancer.server.port=5678"
+#          - "traefik.http.services.n8n.loadbalancer.passhostheader=true"
+#          - "traefik.docker.network=tengig"
 
   # PostgreSQL Database
   postgres:
